# rules_graalvm

./: MODULE.bazel  README.md  extensions.bzl
.github/workflows/: module.build.yml
docs/: examples.md  index.md  legacy-bazel.md  modern-bazel.md  windows.md
example/: README.md
example/integration_tests/bazel4/: WORKSPACE.bazel
example/integration_tests/bzlmod_all_platforms/: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel
example/integration_tests/bzlmod_all_platforms/sample/: BUILD.bazel  Main.java  run_bin.sh
example/integration_tests/bzlmod_all_platforms/tools/remote/: BUILD.bazel  Dockerfile  cc_toolchain_config.bzl  nativelink.json  start.sh
internal/: graalvm_bindist.bzl
internal/native_image/: common.bzl  rules.bzl
